Fix vertical alignment between search box and submit button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -416,3 +416,7 @@ input:focus {
 th {
   white-space: nowrap;
 }
+
+input#search {
+  margin-bottom: 0px;
+}
